Partial commit change password modal, fix sign up modal validations on date and added scrollbar + go to country when click on key

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1229,13 +1229,15 @@ button:focus {
 .overflowHidden {
   overflow: hidden;
 }
-::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
-}
-::-webkit-scrollbar-thumb {
-    background: #FF0000;
-}
+
+//obsolete
+//::-webkit-scrollbar {
+////    width: 0px;  /* remove scrollbar space */
+////    background: transparent;  /* optional: just make scrollbar invisible */
+//}
+//::-webkit-scrollbar-thumb {
+////    background: #FF0000;
+//}
 
 // Chat
 // --------------------------------------------------
